UCF-APR2.4/ftr main/force-app/main/default/objects/Location_Contact__c/Location_Contact__c.object-meta.xml
<CustomObject>
    <label>Location Contact</label>
    <nameField>
        <label>Location Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>