UCF-APR2.4/ftr main/force-app/main/default/objects/Location_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Location Contacts</relationshipLabel>
    <relationshipName>Location_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>