UCF-APR2.4/ftr main/force-app/main/default/objects/Location_Contact__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Location Contacts</relationshipLabel>
    <relationshipName>Location_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>