UCF-APR2.4/ftr main/force-app/main/default/objects/Location_Contact__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Location Contacts</relationshipLabel>
    <relationshipName>Location_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>