UCF-APR2.4/ftr main/force-app/main/default/objects/Location_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Location Contact</fullName>
            </value>
            <value>
                <fullName>Maintenance Contact</fullName>
            </value>
            <value>
                <fullName>Order Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>