UCF-APR2.4/ftr main/force-app/main/default/objects/Location_Contact__c/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Location Contacts</relationshipLabel>
    <relationshipName>Location_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>